# Uber-Data-Analytics-Using-duckdb-dbtcore

./: .env.example  .gitignore  README.md  pyproject.toml
dbt-project/dbt_project/: dbt_project.yml
dbt-project/dbt_project/models/dim/: datetime_dim.sql
sql/: create_datetime_dim.sql  get_data.sql
src/models/: schema_transacao.py
tests/: test_consitencia.py
